--- a/404.html
+++ b/404.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +24,8 @@
             padding: 1rem;
         }
 
-        h1, h2 {
+        h1,
+        h2 {
             margin: 0;
         }
 
@@ -56,21 +58,10 @@
         }
     </style>
 </head>
+
 <body>
-    <h1>These are Real Ballots</h1>
-    <h2>2025 Australian Federal Election</h2>
-
-    <ul>
-        <li><a href="./ACT">Australian Capital Territory</a></li>
-        <li><a href="./NSW">New South Wales</a></li>
-        <li><a href="./NT">Northern Territory</a></li>
-        <li><a href="./QLD">Queensland</a></li>
-        <li><a href="./SA">South Australia</a></li>
-        <li><a href="./TAS">Tasmania</a></li>
-        <li><a href="./VIC">Victoria</a></li>
-        <li><a href="./WA">Western Australia</a></li>
-    </ul>
-
-    <footer>Website &copy; <a href="https://tantusar.au">Thomas Chick</a>, <a href="https://creativecommons.org/public-domain/cc0/">CC01.0</a>.<br>Data <a href="https://www.aec.gov.au/footer/Copyright.htm">&copy; AEC, CCBY4.0</a>.<br>Party logos used for illustrative purposes only.</footer>
+    <h1>These are NOT Real Ballots</h1>
+    <h2>This is a 404 page.</h2>
 </body>
+
 </html>
