ready for prime time

--- a/TAS/index.html
+++ b/TAS/index.html
@@ -4,6 +4,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../senate-style.css" />
+    <script src="../realballots.js"></script>
+    <title>These are Real Tasmanian Ballots</title>
   </head>
   <body>
     <hgroup>
@@ -11,16 +13,17 @@
       Senate Ballot Paper: 
         <select name="division" id="division" required autocomplete="off">
           <option value="" selected hidden>Loading...</option>
-        </select> 
+        </select>/
         <select name="booth" id="booth" disabled autocomplete="off">
 
-        </select> 
+        </select>/
         <select name="batch" id="batch" disabled autocomplete="off">
 
-        </select> 
+        </select>/
         <select name="paper" id="paper" disabled autocomplete="off">
 
         </select>
+        <button name="random" id="random">Random Ballot</button>
       </h1>
       <h2>
         <b>Tasmania</b> – Election of 6 Senators
