--- a/ACT/index.html
+++ b/ACT/index.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../senate-style.css" />
     <script src="../realballots.js"></script>
-    <title>These are Real Australian Capital Territorian Ballots</title>
+    <title>These are Real Australian Capital Territorian Ballots [2025]</title>
   </head>
   
   <body>
