--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         footer {
             text-wrap: balance;
             text-align: center;
+
+            max-width: 80ch;
         }
     </style>
 </head>
@@ -72,6 +74,12 @@
         <li><a href="./WA">Western Australia</a></li>
     </ul>
 
-    <footer>Website &copy; <a href="https://tantusar.au">Thomas Chick</a>, <a href="https://creativecommons.org/public-domain/cc0/">CC01.0</a>.<br>Data <a href="https://www.aec.gov.au/footer/Copyright.htm">&copy; AEC, CCBY4.0</a>.<br>Party logos used for illustrative purposes only.</footer>
+    <footer>
+    <p>All ballots replicated on this website are genuine, formal Senate ballots cast by real voters at the 2025 Australian Federal Election. This website is only possible because all Senate ballots are data entered, and <a href="https://tallyroom.aec.gov.au/SenateDownloadsMenu-31496-Csv.htm">that data entry is published</a>.</p>
+    <p>Some ballots on this website will, in spite of instructions to the contrary, contain fewer than 6 numbered boxes above or 12 below the line, or contain numbers both above and below the line. <a href="https://www.legislation.gov.au/C1918A00027/2025-02-21/2025-02-21/text/original/epub/OEBPS/document_1/document_1.html#_Toc191473423">Under sections 268A and 269 of the Commonwealth Electoral Act</a>, a vote is considered formal if it contains a 1 above or 1-6 below the line. Section 269(2) continues by saying that for a vote that would be formal both above and below the line, only the below the line numbering counts.</p>
+    <p>Website &copy; <a href="https://tantusar.au">Thomas Chick</a>, <a href="https://creativecommons.org/public-domain/cc0/">CC0 1.0</a>.<br>
+    Data <a href="https://www.aec.gov.au/footer/Copyright.htm">&copy; AEC, CC-BY 4.0</a>.<br>
+    Party logos used for illustrative purposes only.</p>
+    </footer>
 </body>
 </html>
