--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             padding: 1rem;
         }
 
+        hgroup {
+            text-align: center;
+        }
+
         h1, h2 {
             margin: 0;
         }
@@ -60,8 +64,10 @@
     </style>
 </head>
 <body>
-    <h1>These are Real Ballots</h1>
-    <h2>2025 Australian Federal Election</h2>
+    <hgroup>
+        <h1>These are Real Ballots</h1>
+        <h2>2025 Australian Federal Election</h2>
+    </hgroup>
 
     <ul>
         <li><a href="./ACT">Australian Capital Territory</a></li>
