--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            min-height: 100dvh;
             margin: 0;
             box-sizing: border-box;
             padding: 1rem;
