--- a/ACT/index.html
+++ b/ACT/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta name="viewport" content="height=device-heigh, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -10,221 +11,220 @@
   </head>
   
   <body>
-    <hgroup>
-      <h1>
-        Senate Ballot Paper:
-        <select name="division" id="division" required autocomplete="off">
-          <option value="" selected hidden>Loading...</option>
-        </select>/
-        <select name="booth" id="booth" disabled autocomplete="off">
-  
-        </select>/
-        <select name="batch" id="batch" disabled autocomplete="off">
-  
-        </select>/
-        <select name="paper" id="paper" disabled autocomplete="off">
-  
-        </select>
-        <button name="random" id="random">Random Ballot</button>
-      </h1>
-      <h2>
-        <b>Australian Capital Territory</b> – Election of 2 Senators
-      </h2>
-    </hgroup>
-    <nav>
-      <header>
-        <h3>You may vote in one of two ways</h3>
-        <aside>Either</aside>
-        <h3>Above the line</h3>
-        <p>By numbering at least 
-          <b>6</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
-        </p>
-      </header>
-      <div class="divider"></div>
-      <footer>
-        <aside>Or</aside>
-        <h3>Below the line</h3>
-        <p>By numbering at least 
-          <b>12</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
-        </p>
-      </footer>
-    </nav>
-    <main>
-      <section>
+    <div class="container">
+      <hgroup>
+        <h1>
+          Senate Ballot Paper:
+          <select name="division" id="division" required autocomplete="off">
+            <option value="" selected hidden>Loading...</option>
+          </select>/
+          <select name="booth" id="booth" disabled autocomplete="off">
+          </select>/
+          <select name="batch" id="batch" disabled autocomplete="off">
+          </select>/
+          <select name="paper" id="paper" disabled autocomplete="off">
+          </select>
+          <button name="random" id="random">Random Ballot</button>
+        </h1>
+        <h2>
+          <b>Australian Capital Territory</b> – Election of 2 Senators
+        </h2>
+      </hgroup>
+      <nav>
         <header>
-          <label>A</label>
-          <img>
-          <img src="../images/SustainableAustraliaParty.jpg">
-          <div class="box"></div>
-          <h4>Sustainable Australia Party - Universal Basic Income</h4>
+          <h3>You may vote in one of two ways</h3>
+          <aside>Either</aside>
+          <h3>Above the line</h3>
+          <p>By numbering at least
+            <b>6</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
+          </p>
         </header>
         <div class="divider"></div>
         <footer>
-          <h4>Sustainable Australia Party - Universal Basic Income</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">HOLGATE</span>
-            <span class="givenName">James</span>
-            <span class="party">Sustainable Australia Party - Universal Basic Income</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">HAYDON</span>
-            <span class="givenName">John</span>
-            <span class="party">Sustainable Australia Party - Universal Basic Income</span>
-          </article>
+          <aside>Or</aside>
+          <h3>Below the line</h3>
+          <p>By numbering at least
+            <b>12</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
+          </p>
         </footer>
-      </section>
-      <section>
-        <header>
-          <label>B</label>
-          <img>
-          <img src="../images/DavidPocock.jpg">
-          <div class="box"></div>
-          <h4>David Pocock</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>David Pocock</h4>
-          <article>
+      </nav>
+      <main>
+        <section>
+          <header>
+            <label>A</label>
+            <img>
+            <img src="../images/SustainableAustraliaParty.jpg">
             <div class="box"></div>
-            <span class="surname">POCOCK</span>
-            <span class="givenName">David</span>
-            <span class="party">David Pocock</span>
-          </article>
-          <article>
+            <h4>Sustainable Australia Party - Universal Basic Income</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Sustainable Australia Party - Universal Basic Income</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">HOLGATE</span>
+              <span class="givenName">James</span>
+              <span class="party">Sustainable Australia Party - Universal Basic Income</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">HAYDON</span>
+              <span class="givenName">John</span>
+              <span class="party">Sustainable Australia Party - Universal Basic Income</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>B</label>
+            <img>
+            <img src="../images/DavidPocock.jpg">
             <div class="box"></div>
-            <span class="surname">VARDY</span>
-            <span class="givenName">Hannah</span>
-            <span class="party">David Pocock</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>C</label>
-          <img>
-          <img src="../images/AnimalJusticeParty.jpg">
-          <div class="box"></div>
-          <h4>Animal Justice Party</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Animal Justice Party</h4>
-          <article>
+            <h4>David Pocock</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>David Pocock</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">POCOCK</span>
+              <span class="givenName">David</span>
+              <span class="party">David Pocock</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">VARDY</span>
+              <span class="givenName">Hannah</span>
+              <span class="party">David Pocock</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>C</label>
+            <img>
+            <img src="../images/AnimalJusticeParty.jpg">
             <div class="box"></div>
-            <span class="surname">SOXSMITH</span>
-            <span class="givenName">Robyn</span>
-            <span class="party">Animal Justice Party</span>
-          </article>
-          <article>
+            <h4>Animal Justice Party</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Animal Justice Party</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">SOXSMITH</span>
+              <span class="givenName">Robyn</span>
+              <span class="party">Animal Justice Party</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">KUDRYCZ</span>
+              <span class="givenName">Walter</span>
+              <span class="party">Animal Justice Party</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>D</label>
+            <img>
+            <img src="../images/AustralianLaborParty.jpg">
             <div class="box"></div>
-            <span class="surname">KUDRYCZ</span>
-            <span class="givenName">Walter</span>
-            <span class="party">Animal Justice Party</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>D</label>
-          <img>
-          <img src="../images/AustralianLaborParty.jpg">
-          <div class="box"></div>
-          <h4>Australian Labor Party</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Australian Labor Party</h4>
-          <article>
+            <h4>Australian Labor Party</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Australian Labor Party</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">GALLAGHER</span>
+              <span class="givenName">Katy</span>
+              <span class="party">Australian Labor Party</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">OH</span>
+              <span class="givenName">Janaline</span>
+              <span class="party">Australian Labor Party</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>E</label>
+            <img>
+            <img src="../images/Liberal.jpg">
             <div class="box"></div>
-            <span class="surname">GALLAGHER</span>
-            <span class="givenName">Katy</span>
-            <span class="party">Australian Labor Party</span>
-          </article>
-          <article>
+            <h4>Liberal</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Liberal</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">VADAKKEDATHU</span>
+              <span class="givenName">Jacob</span>
+              <span class="party">Liberal</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">LEE</span>
+              <span class="givenName">Hayune</span>
+              <span class="party">Liberal</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>F</label>
+            <img>
+            <img src="../images/LibertarianParty.jpg">
             <div class="box"></div>
-            <span class="surname">OH</span>
-            <span class="givenName">Janaline</span>
-            <span class="party">Australian Labor Party</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>E</label>
-          <img>
-          <img src="../images/Liberal.jpg">
-          <div class="box"></div>
-          <h4>Liberal</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Liberal</h4>
-          <article>
+            <h4>HEART/LIBERTARIAN</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>HEART/LIBERTARIAN</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">SEARSON-PRAKAASH</span>
+              <span class="givenName">Elise</span>
+              <span class="party">HEART Party</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">BROWN</span>
+              <span class="givenName">Martin</span>
+              <span class="party">Libertarian</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>G</label>
+            <img>
+            <img src="../images/TheGreens.jpg">
             <div class="box"></div>
-            <span class="surname">VADAKKEDATHU</span>
-            <span class="givenName">Jacob</span>
-            <span class="party">Liberal</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">LEE</span>
-            <span class="givenName">Hayune</span>
-            <span class="party">Liberal</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>F</label>
-          <img>
-          <img src="../images/LibertarianParty.jpg">
-          <div class="box"></div>
-          <h4>HEART/LIBERTARIAN</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>HEART/LIBERTARIAN</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">SEARSON-PRAKAASH</span>
-            <span class="givenName">Elise</span>
-            <span class="party">HEART Party</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">BROWN</span>
-            <span class="givenName">Martin</span>
-            <span class="party">Libertarian</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>G</label>
-          <img>
-          <img src="../images/TheGreens.jpg">
-          <div class="box"></div>
-          <h4>Australian Greens</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Australian Greens</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">HOBBS</span>
-            <span class="givenName">Christina</span>
-            <span class="party">Australian Greens</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">ROCKE</span>
-            <span class="givenName">Jo</span>
-            <span class="party">Australian Greens</span>
-          </article>
-        </footer>
-      </section>
-    </main>
+            <h4>Australian Greens</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Australian Greens</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">HOBBS</span>
+              <span class="givenName">Christina</span>
+              <span class="party">Australian Greens</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">ROCKE</span>
+              <span class="givenName">Jo</span>
+              <span class="party">Australian Greens</span>
+            </article>
+          </footer>
+        </section>
+      </main>
+    </div>
   </body>
 </html>
