--- a/NT/index.html
+++ b/NT/index.html
@@ -1,6 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta name="viewport" content="height=device-heigh, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -10,259 +11,258 @@
   </head>
   
   <body>
-    <hgroup>
-      <h1>
-        Senate Ballot Paper:
-        <select name="division" id="division" required autocomplete="off">
-          <option value="" selected hidden>Loading...</option>
-        </select>/
-        <select name="booth" id="booth" disabled autocomplete="off">
-  
-        </select>/
-        <select name="batch" id="batch" disabled autocomplete="off">
-  
-        </select>/
-        <select name="paper" id="paper" disabled autocomplete="off">
-  
-        </select>
-        <button name="random" id="random">Random Ballot</button>
-      </h1>
-      <h2>
-        <b>Northern Territory</b> – Election of 2 Senators
-      </h2>
-    </hgroup>
-    <nav>
-      <header>
-        <h3>You may vote in one of two ways</h3>
-        <aside>Either</aside>
-        <h3>Above the line</h3>
-        <p>By numbering at least 
-          <b>6</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
-        </p>
-      </header>
-      <div class="divider"></div>
-      <footer>
-        <aside>Or</aside>
-        <h3>Below the line</h3>
-        <p>By numbering at least 
-          <b>12</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
-        </p>
-      </footer>
-    </nav>
-    <main>
-      <section>
+    <div class="container">
+      <hgroup>
+        <h1>
+          Senate Ballot Paper:
+          <select name="division" id="division" required autocomplete="off">
+            <option value="" selected hidden>Loading...</option>
+          </select>/
+          <select name="booth" id="booth" disabled autocomplete="off">
+          </select>/
+          <select name="batch" id="batch" disabled autocomplete="off">
+          </select>/
+          <select name="paper" id="paper" disabled autocomplete="off">
+          </select>
+          <button name="random" id="random">Random Ballot</button>
+        </h1>
+        <h2>
+          <b>Northern Territory</b> – Election of 2 Senators
+        </h2>
+      </hgroup>
+      <nav>
         <header>
-          <label>A</label>
-          <img>
-          <img src="../images/SustainableAustraliaParty.jpg">
-          <div class="box"></div>
-          <h4>Sustainable Australia Party - Universal Basic Income</h4>
+          <h3>You may vote in one of two ways</h3>
+          <aside>Either</aside>
+          <h3>Above the line</h3>
+          <p>By numbering at least
+            <b>6</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
+          </p>
         </header>
         <div class="divider"></div>
         <footer>
-          <h4>Sustainable Australia Party - Universal Basic Income</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">CHIVERS</span>
-            <span class="givenName">Ian</span>
-            <span class="party">Sustainable Australia Party - Universal Basic Income</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">WHYTE</span>
-            <span class="givenName">Lamaan</span>
-            <span class="party">Sustainable Australia Party - Universal Basic Income</span>
-          </article>
+          <aside>Or</aside>
+          <h3>Below the line</h3>
+          <p>By numbering at least
+            <b>12</b><br> of these boxes in the order of your choice (with number 1 as your first choice).
+          </p>
         </footer>
-      </section>
-      <section>
-        <header>
-          <label>B</label>
-          <img>
-          <img src="../images/LegaliseCannabisParty.jpg">
-          <div class="box"></div>
-          <h4>Legalise Cannabis Party</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Legalise Cannabis Party</h4>
-          <article>
+      </nav>
+      <main>
+        <section>
+          <header>
+            <label>A</label>
+            <img>
+            <img src="../images/SustainableAustraliaParty.jpg">
             <div class="box"></div>
-            <span class="surname">LAWRENCE</span>
-            <span class="givenName">Lance Alfred</span>
-            <span class="party">Legalise Cannabis Party</span>
-          </article>
-          <article>
+            <h4>Sustainable Australia Party - Universal Basic Income</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Sustainable Australia Party - Universal Basic Income</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">CHIVERS</span>
+              <span class="givenName">Ian</span>
+              <span class="party">Sustainable Australia Party - Universal Basic Income</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">WHYTE</span>
+              <span class="givenName">Lamaan</span>
+              <span class="party">Sustainable Australia Party - Universal Basic Income</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>B</label>
+            <img>
+            <img src="../images/LegaliseCannabisParty.jpg">
             <div class="box"></div>
-            <span class="surname">LUYKEN</span>
-            <span class="givenName">Suzette</span>
-            <span class="party">Legalise Cannabis Party</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>C</label>
-          <img>
-          <img src="../images/AustralianLaborParty.jpg">
-          <div class="box"></div>
-          <h4>Australian Labor Party (Northern Territory) Branch</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Australian Labor Party (Northern Territory) Branch</h4>
-          <article>
+            <h4>Legalise Cannabis Party</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Legalise Cannabis Party</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">LAWRENCE</span>
+              <span class="givenName">Lance Alfred</span>
+              <span class="party">Legalise Cannabis Party</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">LUYKEN</span>
+              <span class="givenName">Suzette</span>
+              <span class="party">Legalise Cannabis Party</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>C</label>
+            <img>
+            <img src="../images/AustralianLaborParty.jpg">
             <div class="box"></div>
-            <span class="surname">McCARTHY</span>
-            <span class="givenName">Malarndirri</span>
-            <span class="party">Australian Labor Party (Northern Territory) Branch</span>
-          </article>
-          <article>
+            <h4>Australian Labor Party (Northern Territory) Branch</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Australian Labor Party (Northern Territory) Branch</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">McCARTHY</span>
+              <span class="givenName">Malarndirri</span>
+              <span class="party">Australian Labor Party (Northern Territory) Branch</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">ALSOP</span>
+              <span class="givenName">Michael William</span>
+              <span class="party">Australian Labor Party (Northern Territory) Branch</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>D</label>
+            <img>
+            <img src="../images/CountryLiberal.jpg">
             <div class="box"></div>
-            <span class="surname">ALSOP</span>
-            <span class="givenName">Michael William</span>
-            <span class="party">Australian Labor Party (Northern Territory) Branch</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>D</label>
-          <img>
-          <img src="../images/CountryLiberal.jpg">
-          <div class="box"></div>
-          <h4>NT CLP</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>NT CLP</h4>
-          <article>
+            <h4>NT CLP</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>NT CLP</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">PRICE</span>
+              <span class="givenName">Jacinta Nampijinpa</span>
+              <span class="party">NT CLP</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">HERSEY</span>
+              <span class="givenName">Dean</span>
+              <span class="party">NT CLP</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>E</label>
+            <img>
+            <img src="../images/TheGreens.jpg">
             <div class="box"></div>
-            <span class="surname">PRICE</span>
-            <span class="givenName">Jacinta Nampijinpa</span>
-            <span class="party">NT CLP</span>
-          </article>
-          <article>
+            <h4>Australian Greens</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Australian Greens</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">NEWPORT</span>
+              <span class="givenName">Aia</span>
+              <span class="party">Australian Greens</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">WELLS</span>
+              <span class="givenName">Hugo</span>
+              <span class="party">Australian Greens</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>F</label>
+            <img>
+            <img src="../images/PaulineHansonsOneNation.jpg">
             <div class="box"></div>
-            <span class="surname">HERSEY</span>
-            <span class="givenName">Dean</span>
-            <span class="party">NT CLP</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>E</label>
-          <img>
-          <img src="../images/TheGreens.jpg">
-          <div class="box"></div>
-          <h4>Australian Greens</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Australian Greens</h4>
-          <article>
+            <h4>Pauline Hanson's One Nation</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Pauline Hanson's One Nation</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">NUGENT</span>
+              <span class="givenName">Darren</span>
+              <span class="party">Pauline Hanson's One Nation</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">HEWES</span>
+              <span class="givenName">Caine</span>
+              <span class="party">Pauline Hanson's One Nation</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>G</label>
+            <img>
+            <img src="../images/AustralianCitizensParty.jpg">
             <div class="box"></div>
-            <span class="surname">NEWPORT</span>
-            <span class="givenName">Aia</span>
-            <span class="party">Australian Greens</span>
-          </article>
-          <article>
+            <h4>Citizens Party</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Citizens Party</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">WYLIE</span>
+              <span class="givenName">Lionel</span>
+              <span class="party">Citizens Party</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">CAMPBELL</span>
+              <span class="givenName">Trudy</span>
+              <span class="party">Citizens Party</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header>
+            <label>H</label>
+            <img>
+            <img src="../images/LibertarianParty.jpg">
             <div class="box"></div>
-            <span class="surname">WELLS</span>
-            <span class="givenName">Hugo</span>
-            <span class="party">Australian Greens</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>F</label>
-          <img>
-          <img src="../images/PaulineHansonsOneNation.jpg">
-          <div class="box"></div>
-          <h4>Pauline Hanson's One Nation</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Pauline Hanson's One Nation</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">NUGENT</span>
-            <span class="givenName">Darren</span>
-            <span class="party">Pauline Hanson's One Nation</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">HEWES</span>
-            <span class="givenName">Caine</span>
-            <span class="party">Pauline Hanson's One Nation</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>G</label>
-          <img>
-          <img src="../images/AustralianCitizensParty.jpg">
-          <div class="box"></div>
-          <h4>Citizens Party</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Citizens Party</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">WYLIE</span>
-            <span class="givenName">Lionel</span>
-            <span class="party">Citizens Party</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">CAMPBELL</span>
-            <span class="givenName">Trudy</span>
-            <span class="party">Citizens Party</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header>
-          <label>H</label>
-          <img>
-          <img src="../images/LibertarianParty.jpg">
-          <div class="box"></div>
-          <h4>Libertarian</h4>
-        </header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Libertarian</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">HANSEN</span>
-            <span class="givenName">Jed</span>
-            <span class="party">Libertarian</span>
-          </article>
-          <article>
-            <div class="box"></div>
-            <span class="surname">SMITH</span>
-            <span class="givenName">Trevor</span>
-            <span class="party">Libertarian</span>
-          </article>
-        </footer>
-      </section>
-      <section>
-        <header></header>
-        <div class="divider"></div>
-        <footer>
-          <h4>Ungrouped</h4>
-          <article>
-            <div class="box"></div>
-            <span class="surname">KENNY</span>
-            <span class="givenName">Que</span>
-            <span class="party">Independent</span>
-          </article>
-        </footer>
-      </section>
-    </main>
-  </body>
+            <h4>Libertarian</h4>
+          </header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Libertarian</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">HANSEN</span>
+              <span class="givenName">Jed</span>
+              <span class="party">Libertarian</span>
+            </article>
+            <article>
+              <div class="box"></div>
+              <span class="surname">SMITH</span>
+              <span class="givenName">Trevor</span>
+              <span class="party">Libertarian</span>
+            </article>
+          </footer>
+        </section>
+        <section>
+          <header></header>
+          <div class="divider"></div>
+          <footer>
+            <h4>Ungrouped</h4>
+            <article>
+              <div class="box"></div>
+              <span class="surname">KENNY</span>
+              <span class="givenName">Que</span>
+              <span class="party">Independent</span>
+            </article>
+          </footer>
+        </section>
+      </main>
+        </body>
+    </div>
 </html>
