reword party logo disclaimer

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <p>If you're viewing this website on a phone or tablet, it's probably going to load really zoomed out. The alternative was not letting you zoom out at all. #webdev</p>
     <p>Website &copy; <a href="https://tantusar.au">Thomas Chick</a>, <a href="https://creativecommons.org/public-domain/cc0/">CC0 1.0</a>.<br>
     Data <a href="https://www.aec.gov.au/footer/Copyright.htm">&copy; AEC, CC-BY 4.0</a>.<br>
-    Party logos used for illustrative purposes only.</p>
+    Party logos are the property of their respective parties, and are used for illustrative purposes only.</p>
     </footer>
 </body>
 </html>
